<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/halka"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/insetDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:padding="25dp"
                android:text="Enter your Data"
                android:textColor="@color/white"

                android:textSize="28sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"

            tools:layout_editor_absoluteX="17dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/poppins"
                    android:text="Date:"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/date_1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="24dp"

                    android:background="@color/white"

                    android:drawablePadding="12dp"
                    android:hint="Date"
                    android:padding="5dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2">

                </EditText>


            </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="24dp"
                android:fontFamily="@font/poppins"
                android:text="Time:"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/time_1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="24dp"

                android:background="@color/white"

                android:drawablePadding="12dp"
                android:hint="Time"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3">

            </EditText>


        </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp">


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/poppins"
                    android:text="Systolic:"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/systolic_1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="24dp"

                    android:background="@color/white"

                    android:drawablePadding="12dp"
                    android:hint="Systolic"
                    android:padding="5dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView4">

                </EditText>


            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/poppins"
                    android:text="Diastolic:"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/diastolic_1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="24dp"

                    android:background="@color/white"

                    android:drawablePadding="12dp"
                    android:hint="Diastolic"
                    android:padding="5dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView5">

                </EditText>


            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp">


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/poppins"
                    android:text="Heart Rate:"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/heartRate_1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginEnd="24dp"

                    android:background="@color/white"

                    android:drawablePadding="12dp"
                    android:hint="Heart Rate"
                    android:padding="5dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/textView6">

                </EditText>


            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp">


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/poppins"
                    android:text="Comment:"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/comment_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:gravity="top|start"
                    android:layout_marginEnd="24dp"
                    android:background="@color/white"
                    android:drawablePadding="12dp"
                    android:hint="Comment"
                    android:lines="8"
                    android:maxLines="10"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                </EditText>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/primary"
                android:text="SAVE" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>
