...

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/date_2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="24dp"

                    android:background="@color/white"
...

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/systolic_2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="24dp"

                    android:background="@color/white"
...

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/diastolic_2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="24dp"

                    android:background="@color/white"
...

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/heartRate_2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginEnd="24dp"

                    android:background="@color/white"
...
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="24dp">

                <Button
                    android:id="@+id/update_2"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="24dp"
                    android:backgroundTint="@color/primary"

                    android:text="Update"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/delete_2"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="right"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@color/primary"

...
